Fix scrollbar on chrome

--- a/src/global.css
+++ b/src/global.css
@@ -8,5 +8,7 @@ canvas {
 html, body {
     height: 100vh;
     width: 100vw;
+    /* height gets replaced, so use the aspect ratio of the game as the width to stop it overflowing if the screen is not tall enough */
+    max-width: calc(100vh * (1280 / 1024));
 }
 
